/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

import "magma/orc8r/protos/mconfig.proto";
import "magma/orc8r/protos/common.proto";

package magma.orc8r.configurator;
option go_package = "protos";

message GetMconfigRequest {
    string hardwareID = 1;
}

message GetMconfigResponse {
    GatewayConfigs configs = 1;
    string logicalID = 2;
    // TODO(8/5/20): revert json_configs once we send proto descriptors from mconfig_builders
    bytes json_configs = 3 [deprecated=true]; // deprecated
}

service SouthboundConfigurator {
    rpc GetMconfig(magma.orc8r.Void) returns (GatewayConfigs) {}

    // GetMconfigInternal exists to support the existing streamer mconfig
    // policy. This should be removed when we migrate gateway mconfig updates
    // from streamer to this southbound configurator servicer.
    rpc GetMconfigInternal(GetMconfigRequest) returns (GetMconfigResponse) {}
}
